fix: Rating questions selection button content should not overwrap on small device

--- a/frontend/app/styles/teacher/content-creation.scss
+++ b/frontend/app/styles/teacher/content-creation.scss
@@ -45,6 +45,7 @@ $palette: (
       min-height: 34px;
       outline: none;
       box-shadow: none;
+      display: flex;
 
       &:hover, &:active {
         outline: none;
